fixed background image not showing and add picture to game instructions

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
     background-color:#ebd6bb;
     color: #65451F;
-    background-image: url('/images/joel-jasmin-forestbird-xzPMUMDDsfk-unsplash.jpg');
+    background-image: url('https://samjohn87.github.io/peg_game/images/joel-jasmin-forestbird-xzPMUMDDsfk-unsplash.jpg');
     background-size: cover;
 }
 
